# discord-qol-bot

./: .dockerignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
discord_qol_bot/: __main__.py  bot.py  qol_client.py
